Bug 1309473 - Set browser.dom.window.dump.enabled to true in xpcshell to print error. r=bholley